# wodo-import

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
crates/wodo-import/: Cargo.toml
crates/wodo-import/src/: lib.rs  main.rs
crates/wodo-interop/: Cargo.toml
crates/wodo-interop/src/: filter_token.rs  lib.rs  markdown.rs  yrs_xml_copy.rs
crates/wodo-interop/src/export/: mod.rs  package.rs  types.rs
crates/wodo-interop/src/import/: jira_fetch.rs  linear_fetch.rs  mod.rs
crates/wodo-interop/src/import/convert/: adf.rs  jira.rs  linear.rs  mod.rs
crates/wodo-interop/src/template/: instantiator.rs  mod.rs  types.rs
