[package]
name = "wodo-interop"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "wodo_interop"
path = "src/lib.rs"

[dependencies]
# Core CRDT — markdown encoding, import builder, instantiator helpers
yrs = "0.19"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# IDs & encoding
uuid = { workspace = true }
base64 = { workspace = true }

# Time
chrono = { workspace = true }

# Export archive (ZIP packaging)
zip = { version = "2", default-features = false, features = ["deflate"] }

# Async + HTTP (Jira/Linear fetchers)
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Logging
tracing = { workspace = true }
